piccode: Backend improvements